--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lucide-react": "^0.562.0",
     "recharts": "^3.6.0",
     "@google/genai": "^1.34.0",
-    "firebase": "^12.7.0"
+    "firebase": "^12.7.0",
+    "html2canvas": "1.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
